--- a/컴퓨터그래픽스/실습/실습.vcxproj.filters
+++ b/컴퓨터그래픽스/실습/실습.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="4주차-다각형.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="5주차-마우스클릭.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
