--- a/비전프로그래밍/실습용/실습용.vcxproj.filters
+++ b/비전프로그래밍/실습용/실습용.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="CV_20193148_35.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="소스.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
