비전(5주-과제), 그래픽스(2주-강의)
비전 프로그래밍 5주차 과제 완료 및 그래픽스 2주차 강의 학습 완료
집단상담 직업적성검사 완료

--- a/비전프로그래밍/실습용/실습용.vcxproj.filters
+++ b/비전프로그래밍/실습용/실습용.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="소스.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="cv_52_20193148.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
