--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 *.out
 *.app
 *.ipch
+1.대내외활동/봉사동아리/2021학년도 동행봉사단[학과(전공)연계]프로그램 명단 양식.xlsx
+1.대내외활동/봉사동아리/동행봉사단 활동 참가신청서(개인).hwp
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서(개인)_엄예진.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서(개인)_김은조.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_남유정.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_황진주.pdf
+1.대내외활동/봉사동아리/2021학년도 동행봉사단[학과(전공)연계]프로그램 명단 양식.xlsx
