컴퓨터그래픽스-5 과제완료
컴퓨터그래픽스-5 과제 : 공의 충돌 이벤트 구현하기

--- a/컴퓨터그래픽스/실습/실습.vcxproj.filters
+++ b/컴퓨터그래픽스/실습/실습.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="5주차-마우스클릭.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="5주차-과제_공충돌구현.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
