튜터링 과제 요약 및 ignore작성
튜터링 과제 요약 및 ignore작성

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,15 @@
 *.log
 *.idb
 *.tlog
+1.대내외활동/봉사동아리/~$2021학년도 동행봉사단[학과(전공)연계]프로그램 명단 양식.xlsx
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_김남빈.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_박근민.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_문예진.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_장주영.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_정현수.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_이선권.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_엄예진.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_김은조.pdf
+1.대내외활동/봉사동아리/동행봉사단 활동 참가신청서(개인).docx
+1.대내외활동/봉사동아리/~$2021학년도 동행봉사단[학과(전공)연계]프로그램 명단 양식.xlsx
+1.대내외활동/봉사동아리/2021학년도 동행봉사단[학과(전공)연계]프로그램 명단 양식.xlsx
