--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@
 1.대내외활동/봉사동아리/동행봉사단 활동 참가신청서(개인).docx
 1.대내외활동/봉사동아리/~$2021학년도 동행봉사단[학과(전공)연계]프로그램 명단 양식.xlsx
 1.대내외활동/봉사동아리/2021학년도 동행봉사단[학과(전공)연계]프로그램 명단 양식.xlsx
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서-암호화.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_정재록.pdf
+1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서.pdf
