--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,15 @@
 1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서-암호화.pdf
 1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서_정재록.pdf
 1.대내외활동/봉사동아리/참가신청서/동행봉사단 활동 참가신청서.pdf
+1.대내외활동/전공튜터링/1회차_사진.png
+1.대내외활동/봉사동아리/참가신청서/2021학년도 동행봉사단 프로그램 명단.xlsx
+비전프로그래밍/실습용/.vs/실습용/v16/.suo
+*.db
+*.pdb
+*.tlog
+*.filters
+1.대내외활동/봉사동아리/2. 2021학년도 동행봉사단[학과(전공)연계 프로그램] 지원서-활동계획서 및 예산서.hwp
+1.대내외활동/봉사동아리/참가신청서/2021학년도 동행봉사단[학과(전공)연계]프로그램 명단 양식.xlsx
+1.대내외활동/전공튜터링/사전만족도 미실시자.xlsx
+1.대내외활동/집단상담/3회차/3회차.psd
+1.대내외활동/집단상담/진로 집단 3회기.pdf
