--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@
 1.대내외활동/전공튜터링/사전만족도 미실시자.xlsx
 1.대내외활동/집단상담/3회차/3회차.psd
 1.대내외활동/집단상담/진로 집단 3회기.pdf
+*.opendb
+게임자료구조/게임자료구조/.vs/게임자료구조/v16/Browse.VC.db
+*.db
