게임자료구조-6주과제
게임자료구조-6주과제

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@
 *.opendb
 게임자료구조/게임자료구조/.vs/게임자료구조/v16/Browse.VC.db
 *.db
+1.대내외활동/봉사동아리/참가신청서/봉행동사단_DoD_참가신청서_명단.zip
+게임자료구조/20193148_binaryTree.zip
+게임자료구조/6주차과제/.vs/6주차과제/v16/.suo
+*.vcxproj
+*.user
+*.ilk
+게임자료구조/BinaryTree.zip
