--- a/컴퓨터그래픽스/실습/실습.vcxproj.filters
+++ b/컴퓨터그래픽스/실습/실습.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="5주차-과제_공충돌구현.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="6주차-베이저곡선.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
