게임 그래픽스 - 6주차
게임 그래픽스 - 6주차 대면수업 요약

--- a/3D게임그래픽스프로그래밍/실습용/실습용.vcxproj
+++ b/3D게임그래픽스프로그래밍/실습용/실습용.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="5주차과제_GL_TRIANGLE_FAN_을이용한원그리기.cpp" />
+    <ClCompile Include="6주차-대면.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
