컴퓨터 그래픽스 - 6주차 수강
6주차 수강 및 베지어 곡선 코드 완성

--- a/컴퓨터그래픽스/실습/실습.vcxproj.filters
+++ b/컴퓨터그래픽스/실습/실습.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="5주차-과제_공충돌구현.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="6주차-베이저곡선.cpp">
+    <ClCompile Include="6주차-베지어곡선.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
