--- a/컴퓨터그래픽스/실습/실습.vcxproj.filters
+++ b/컴퓨터그래픽스/실습/실습.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="6주차-베지어곡선.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="자전공전.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
