컴그 시험 끝!
컴그 시험 끝!

--- a/컴퓨터그래픽스/실습/실습.vcxproj
+++ b/컴퓨터그래픽스/실습/실습.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="5주차-마우스클릭.cpp" />
     <ClCompile Include="6주차-베지어곡선.cpp" />
     <ClCompile Include="자전공전.cpp" />
+    <ClCompile Include="테스트용.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
