--- a/컴퓨터그래픽스/실습/실습.vcxproj.filters
+++ b/컴퓨터그래픽스/실습/실습.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="자전공전.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="테스트용.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
