--- a/게임자료구조/게임자료구조/게임자료구조.vcxproj
+++ b/게임자료구조/게임자료구조/게임자료구조.vcxproj
@@ -141,6 +141,10 @@
     <ClCompile Include="4주차대면-월.cpp" />
     <ClCompile Include="4주차 대면 - 목.cpp" />
     <ClCompile Include="6주차 대면 - 목.cpp" />
+    <ClCompile Include="BinarySearchTree.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BinarySearchTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
