--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,8 @@ _NCrunch*
 *.ilk
 게임자료구조/BinaryTree.zip
 디지털 영상처리/~$디지털영상처리(Homework#02).pptx
+1.대내외활동/전공튜터링/04.27-2회차-1.png
+1.대내외활동/전공튜터링/04.27-2회차-1.png
+1.대내외활동/전공튜터링/04.27-2회차-2.png
+1.대내외활동/전공튜터링/04.27-2회차-1.png
+1.대내외활동/전공튜터링/04.27-2회차-2.png
