9주차 과제 완료
9주차 과제 완료

--- a/비전프로그래밍/실습용/실습용.vcxproj
+++ b/비전프로그래밍/실습용/실습용.vcxproj
@@ -150,6 +150,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="9주차과제.cpp" />
     <ClCompile Include="CV_20193148_32.cpp" />
     <ClCompile Include="CV_20193148_35.cpp" />
     <ClCompile Include="cv_52_20193148.cpp" />
