--- a/비전프로그래밍/실습용/실습용.vcxproj.filters
+++ b/비전프로그래밍/실습용/실습용.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="cv_51_20193148.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9주차과제.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
