--- a/컴퓨터그래픽스/실습/실습.vcxproj
+++ b/컴퓨터그래픽스/실습/실습.vcxproj
@@ -142,7 +142,8 @@
     <ClCompile Include="5주차-과제_공충돌구현.cpp" />
     <ClCompile Include="5주차-마우스클릭.cpp" />
     <ClCompile Include="6주차-베지어곡선.cpp" />
-    <ClCompile Include="자전공전.cpp" />
+    <ClCompile Include="9주차-3D큐브.cpp" />
+    <ClCompile Include="7주차-자전공전.cpp" />
     <ClCompile Include="테스트용.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
