--- a/게임자료구조/게임자료구조/게임자료구조.vcxproj.filters
+++ b/게임자료구조/게임자료구조/게임자료구조.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="BinarySearchTree.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="sort.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinarySearchTree.h">
