--- a/컴퓨터그래픽스/실습/실습.vcxproj.filters
+++ b/컴퓨터그래픽스/실습/실습.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="7주차-자전공전.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="10주.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
