--- a/컴퓨터그래픽스/실습/실습.vcxproj
+++ b/컴퓨터그래픽스/실습/실습.vcxproj
@@ -138,6 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="10주.cpp" />
     <ClCompile Include="4주차-다각형.cpp" />
     <ClCompile Include="5주차-과제_공충돌구현.cpp" />
     <ClCompile Include="5주차-마우스클릭.cpp" />
