--- a/컴퓨터그래픽스/실습/실습.vcxproj
+++ b/컴퓨터그래픽스/실습/실습.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -146,7 +146,7 @@
     <ClCompile Include="9주차-3D큐브.cpp" />
     <ClCompile Include="7주차-자전공전.cpp" />
     <ClCompile Include="테스트용.cpp" />
-    <ClCompile Include="힝.cpp" />
+    <ClCompile Include="10주차-태양계.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
