--- a/비전프로그래밍/실습용/실습용.vcxproj
+++ b/비전프로그래밍/실습용/실습용.vcxproj
@@ -150,8 +150,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="10주차과제.cpp" />
-    <ClCompile Include="9주차과제.cpp" />
+    <ClCompile Include="10주차과제-사진유사도.cpp" />
+    <ClCompile Include="11주차과제-얼굴검출기.cpp" />
+    <ClCompile Include="9주차과제-함수설명.cpp" />
     <ClCompile Include="CV_20193148_32.cpp" />
     <ClCompile Include="CV_20193148_35.cpp" />
     <ClCompile Include="cv_52_20193148.cpp" />
