--- a/비전프로그래밍/실습용/실습용.vcxproj.filters
+++ b/비전프로그래밍/실습용/실습용.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="9주차과제-함수설명.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="12주차과제-눈입검출및성별검출.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
