--- a/컴퓨터그래픽스/실습/실습.vcxproj
+++ b/컴퓨터그래픽스/실습/실습.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="6주차-베지어곡선.cpp" />
     <ClCompile Include="9주차-3D큐브.cpp" />
     <ClCompile Include="7주차-자전공전.cpp" />
+    <ClCompile Include="소스.cpp" />
     <ClCompile Include="테스트용.cpp" />
     <ClCompile Include="10주차-태양계.cpp" />
   </ItemGroup>
