--- a/비전프로그래밍/실습용/실습용.vcxproj.filters
+++ b/비전프로그래밍/실습용/실습용.vcxproj.filters
@@ -57,7 +57,7 @@
     <ClCompile Include="13주차과제-동전인식.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="14주차과제-차량번호인식.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
