--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,6 @@ OpenCV_영상처리_학습자용/
 컴퓨터그래픽스/벽돌깨기 게임/영상/조은희_컴퓨터그래픽스2021.mp4
 컴퓨터그래픽스/벽돌깨기 게임/영상/컴퓨터그래픽스_황진주.mp4
 임베디드시스템/유정이 서명.jpg
+임베디드시스템/프로젝트/영상/발표영상.mp4
+임베디드시스템/프로젝트/영상/발표영상__.mp4
+임베디드시스템/프로젝트/영상/영상모음.zip
