--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,4 @@ OpenCV_영상처리_학습자용/
 임베디드시스템/프로젝트/영상/발표영상.mp4
 임베디드시스템/프로젝트/영상/발표영상__.mp4
 임베디드시스템/프로젝트/영상/영상모음.zip
+1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(김성안).hwp
