--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,9 @@ OpenCV_영상처리_학습자용/
 1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(박근민).hwp
 1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(이선권).hwp
 1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(황진주).hwp
+1.대내외활동/봉사동아리/성범죄조사동의서/0.폭력,아동학대 전력조회동의서(병합본).pdf
+1.대내외활동/봉사동아리/성범죄조사동의서/1.성폭력,아동학대 전력조회동의서(취합본).hwp
+1.대내외활동/봉사동아리/성범죄조사동의서/1.성폭력,아동학대 전력조회동의서(취합본).pdf
+1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(김성안) - 복사본.hwp
+1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(장주영).pdf
+1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(황진주).pdf
