홍보자료 제작 완료 및 명단 작성 완료

--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,7 @@ OpenCV_영상처리_학습자용/
 1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(김성안) - 복사본.hwp
 1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(장주영).pdf
 1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(황진주).pdf
+1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(김지우).pdf
+1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(김지우).hwp
+1.대내외활동/봉사동아리/참여명단.hwp
+1.대내외활동/봉사동아리/하계방학_아두이노_코딩교육.zip
