자료 재전송

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ OpenCV_영상처리_학습자용/
 1.대내외활동/봉사동아리/참여명단.hwp
 1.대내외활동/봉사동아리/하계방학_아두이노_코딩교육.zip
 1.대내외활동/봉사동아리/성범죄조사동의서/폭력,아동학대 전력조회동의서(병합본).pdf
+1.대내외활동/봉사동아리/성범죄조사동의서/폭력,아동학대 전력조회동의서(취합본).pdf
+1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(문예진).pdf
+1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(문예진).hwp
