활동사진 제외

--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,4 @@ OpenCV_영상처리_학습자용/
 1.대내외활동/봉사동아리/성범죄조사동의서/성폭력,아동학대 전력조회동의서(문예진).hwp
 1.대내외활동/봉사동아리/210702 성범죄 및 아동학대전력 조회 대상자 명단(7.2).xlsx
 1.대내외활동/봉사동아리/예산사용내역.txt
+1.대내외활동/봉사동아리/활동사진/
