--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,5 @@ OpenCV_영상처리_학습자용/
 1.대내외활동/봉사동아리/210702 성범죄 및 아동학대전력 조회 대상자 명단(7.2).xlsx
 1.대내외활동/봉사동아리/예산사용내역.txt
 1.대내외활동/봉사동아리/활동사진/
+1.대내외활동/봉사동아리/남광종합사회복지관
+1.대내외활동/봉사동아리/영상
