--- a/.gitignore
+++ b/.gitignore
@@ -266,6 +266,11 @@ OpenCV_영상처리_학습자용/
 1.대내외활동/봉사동아리/예산사용내역.txt
 1.대내외활동/봉사동아리/활동사진/
 1.대내외활동/봉사동아리/남광종합사회복지관
-1.대내외활동/봉사동아리/영상
+1.대내외활동/봉사동아리/영상/부곡여중
 *.sfk
 1.대내외활동/전공튜터링/영상/제목을 입력해주세요..zip
+1.대내외활동/봉사동아리/영상/4차산업혁명/폰트.zip
+*.mp4
+*.mp3
+*.veg
+1.대내외활동/봉사동아리/영상/4차산업혁명/4차 산업혁명.png
